REGRESSION(r290770): element.scrollIntoViewIfNeeded() scrolls to top even when element is already in viewport https://bugs.webkit.org/show_bug.cgi?id=238985

Patch by Rob Buis <rbuis@igalia.com> on 2022-04-29
Reviewed by Simon Fraser.

LayoutTests/imported/w3c:

* web-platform-tests/css/cssom-view/scrollintoview-zero-height-item-expected.txt: Added.
* web-platform-tests/css/cssom-view/scrollintoview-zero-height-item.html: Added.

Source/WebCore:

This mostly reverts to the code as it was before r290770, but adds code to
treat non-intersections as hidden, including zero width/height rects.

Test: imported/w3c/web-platform-tests/css/cssom-view/scrollintoview-zero-height-item.html

* rendering/RenderLayer.cpp:
(WebCore::RenderLayer::getRectToExpose const):

Canonical link: https://commits.webkit.org/250146@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@293642 268f45cc-cd09-0410-ab3c-d52691b4dbfc